--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -7,6 +7,8 @@
     "errors": {
       "username": "Username must be alphanumeric & atleast 5 characters",
       "password": "Password must be alphanumeric & atleast 8 characters"
-    }
+    },
+    "selectCountryAndLang": "Select your country & language",
+    "back": "Go Back"
   }
 }
