--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -7,11 +7,12 @@
     "errors": {
       "username": {
         "AE": "يجب أن يكون اسم المستخدم أبجديًا رقميًا وأن لا يقل عن 5 أحرف",
-        "IN": "يجب أن يحتوي اسم المستخدم على 6 أحرف على الأقل وأن يحتوي على '@' أو '_'",
+        "IN": "يجب أن يحتوي اسم المستخدم على 6 أحرف على الأقل وأن يحتوي على أو '_'",
         "SA": "يجب أن يكون اسم المستخدم أبجديًا رقميًا وأن لا يقل عن 6 أحرف وأن يحتوي على رقم واحد",
         "EG": "يجب أن يكون اسم المستخدم أبجديًا رقميًا وأن لا يقل عن 9 أحرف"
       },
-      "password": "يجب أن تكون كلمة المرور أبجدية رقمية ولا تقل عن 8 أحرف"
+      "password": "يجب أن تكون كلمة المرور أبجدية رقمية ولا تقل عن 8 أحرف",
+      "signup": "هناك خطأ ما!"
     },
     "selectCountry": "اختر بلدك",
     "country": {
@@ -27,6 +28,9 @@
     },
     "selectLanguage": "اختر لغتك",
     "back": "عُد",
-    "save": "يحفظ"
+    "save": "يحفظ",
+    "dashboard": {
+      "title": "تم تسجيل المستخدم بنجاح"
+    }
   }
 }
